Runtime commands are now built using ProcessBuilders to allow for arguments containing whitespaces.